# l9-ci-debt-resolver

./: .gitignore  AGENTS.md  MANIFEST.sha256  README.md  ROADMAP.md  VALIDATION_REPORT.json  pyproject.toml
.github/workflows/: dispatch-intelligence.yml  l9-analysis.yml  l9-lint-test.yml  phase-0-foundation.yml  phase-1-log-acquisition.yml  phase-2-repository-correlation.yml  phase-3-bounded-remediation.yml  phase-4-remote-resolution.yml  phase-5-intelligence-feedback.yml  phase-6-pr-repair-delegation.yml
.l9/: classification-policy.yaml  delegation-privacy-policy.yaml  feedback-privacy-policy.yaml  intelligence-feedback-contract.yaml  log-acquisition-contract.yaml  phase-0-acceptance-gates.yaml  phase-1-acceptance-gates.yaml  phase-2-acceptance-gates.yaml  phase-3-acceptance-gates.yaml  phase-4-acceptance-gates.yaml  phase-5-acceptance-gates.yaml  phase-6-acceptance-gates.yaml  pr-repair-delegation-contract.yaml  remediation-contract.yaml  remote-resolution-contract.yaml  repo-spec.yaml  repository-correlation-contract.yaml  resolver-foundation-contract.yaml  sdk-schema-registry.json  terminal-state-policy.yaml  validation-contract.yaml
docs/source/: Phase-0.md  Phase-1.md  Phase-2.md  Phase-3.md  Phase-4.md  Phase-5.md  Phase-6.md  build-phase-0.sh  build-phase-1.sh  build-phase-2.sh  build-phase-3.sh  build-phase-4.sh  build-phase-5.sh  build-phase-6.sh
schemas/resolver/: acquisition-report.schema.json  ci-failure-classification.schema.json  ci-run-evidence.schema.json  classification-trace.schema.json  delegation-record.schema.json  evidence-bundle.schema.json  (+21 more)
(+162 files in other folders)
