[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"
[project]
name = "l9-ci-debt-resolver"
version = "0.7.0"
description = "Evidence-first CI failure diagnosis and bounded recovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Quantum-L9" }
]
dependencies = [
  "jsonschema>=4.23,<5",
  "pyyaml>=6.0,<7"
]
[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1"
]
[project.scripts]
l9-debt-resolver = "l9_debt_resolver.cli:main"
[tool.hatch.build.targets.wheel]
packages = ["src/l9_debt_resolver"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "strict"
[tool.ruff]
target-version = "py311"
line-length = 88
[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "RUF"
]
[tool.mypy]
python_version = "3.11"
strict = true
packages = ["l9_debt_resolver"]
